migrate to SDK v1.2.0 Added Interstitial support

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <!-- Update with your Mopub Ad Unit Ids -->
     <string name="mopub_native_ad_unit_id">3530141cfcae4c1cbda6f608fca8633d</string>
+    <string name="mopub_interstitial_ad_unit_id">4cf7bee0e24a4ef5b0709864bb0edc00</string>
 </resources>
